<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <!-- TEACHER NAME -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teacher_name_label"/>

        <EditText
            android:id="@+id/teacher_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/teacher_name_hint"/>
    </LinearLayout>

    <!-- GENDER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teacher_gender_label"/>

        <Spinner
            android:id="@+id/teacher_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
        </Spinner>

    </LinearLayout>

    <!-- SUBJECT TEACHES -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teacher_subject_teaches_label"/>

        <EditText
            android:id="@+id/teacher_subject_teaches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/teacher_subject_teaches_hint"/>
    </LinearLayout>

    <!-- PAYMENT PER DAY -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teacher_payment_per_day_label"/>

        <EditText
            android:id="@+id/teacher_payment_per_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="6"
            android:inputType="numberDecimal"
            android:hint="@string/teacher_payment_per_day_hint"/>
    </LinearLayout>

    <!-- IS ACTIVE -->
    <CheckBox
        android:id="@+id/teacher_is_active"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/teacher_is_active_label"/>

</LinearLayout>
