<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <!-- COL 1 -PHOTO, CAMERA, REMOVE PHOTO, CHILD NAME -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp">

        <!-- PHOTO, CAMERA, REMOVE PHOTO -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="10dp">

            <!-- PHOTO -->
            <ImageView
                android:id="@+id/appointment_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@android:color/darker_gray"
                android:cropToPadding="true"
                android:scaleType="centerInside"/>

            <!-- CAMERA, REMOVE PHOTO -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- CAMERA -->
                <ImageButton
                    android:id="@+id/appointment_camera"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_menu_camera"/>

                <!-- REMOVE PHOTO -->
                <ImageButton
                    android:id="@+id/appointment_remove_photo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_delete_icon"/>
            </LinearLayout>

        </LinearLayout>

        <!-- COL 2 - CHILD NAME, PERSON CONTACT NUMBER -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <!-- CHILD NAME, PERSON CONTACT NUMBER -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- CHILD NAME -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="?android:listSeparatorTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/appointment_child_name_label"/>

                    <EditText
                        android:id="@+id/appointment_child_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/appointment_child_name_hint"/>
                </LinearLayout>

                <!-- PERSON CONTACT NUMBER -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="?android:listSeparatorTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/appointment_person_contact_number_label"/>

                    <EditText
                        android:id="@+id/appointment_person_contact_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:hint="@string/appointment_person_contact_number_hint"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!-- DATE AND TIME BUTTON-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- DATE BUTTON -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/appointment_date_label"/>

            <Button
                android:id="@+id/appointment_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- TIME BUTTON -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/appointment_check_in_time_label"/>

            <Button
                android:id="@+id/appointment_check_in_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <!-- HAS SETTLED -->
    <CheckBox
        android:id="@+id/appointment_settled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appointment_settled_label"/>
</LinearLayout>
